--- a/src/views/books/index.ejs
+++ b/src/views/books/index.ejs
@@ -3,7 +3,7 @@
 
     <a class="btn btn-sm btn-primary" href="/books/create">Добавить запись</a>
 
-    <% if(books.length) { %>
+    <% if(books?.length) { %>
         <table class="table table-striped table-sm  mt-3">
             <thead>
                 <tr>
