--- a/src/views/common/menu.ejs
+++ b/src/views/common/menu.ejs
@@ -1,3 +1,4 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/books">Книги</a>
+    <a class="navbar-brand" href="/user">Профиль</a>
 </nav>
