--- a/src/views/common/header.ejs
+++ b/src/views/common/header.ejs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.4.0/mdb.min.js"></script>
+    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 
     <title>
         <%= title %>
